--- a/style.css
+++ b/style.css
@@ -1,5 +1,38 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+header {
+  text-align: center;
 }
+
+nav > a {
+  padding-right: 10px;
+  padding-left: 10px;
+  background: yellow;
+}
+
+figure {
+  width: 900px;
+  margin: auto;
+  text-align: center;
+  font-size: 14px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#featured-property > p {
+  width: 790px;
+  margin: auto;
+  text-align: center;
+  padding: 5px;
+}
+
+#details {
+  display: block;
+  float: left;
+}
+
+#display > div {
+  width: 25%;
+  text-align: center;
+}
+
+
+
