Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -26,15 +26,13 @@ figure {
 
 #details {
   display: block;
-  background-color: gray;
-  
 }
 
 div {
   float: left;
   width: 25%;
   text-align: center;
-  background-color: gray;
+  background: gray;
 }
 
 
